수정 업데이트 1차
벡터 이미지 추가.
페이지 제목 추가.
페이지 상세 내역 설명.

--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -177,24 +177,24 @@
                 <img src="/images/spaceship03.jpg" class="d-block w-100" alt="우주선3">
                 <div class="carousel-caption d-none d-md-block">
                   <a href="/pages/sub03.html" class="btn btn-outline-danger">맨앤캐논</a>
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>First MMORPG</h5>
+                  <p>나의 첫 MMORPG 기획서.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="/images/spaceship04.jpg" class="d-block w-100" alt="우주선4">
                 <div class="carousel-caption d-none d-md-block">
                   <a href="/pages/sub04.html" class="btn btn-outline-primary">모코코푸른별</a>
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Second MMORPG</h5>
+                  <p>나의 두번째 MMORPG 기획서.</p>
                 </div>
             </div>
               <div class="carousel-item">
                 <img src="/images/spaceship05.jpg" class="d-block w-100" alt="우주선5">
                 <div class="carousel-caption d-none d-md-block">
                   <a href="/pages/sub05.html" class="btn btn-outline-info">메이플흰색별</a>
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Third MMORPG</h5>
+                  <p>나의 세번째 MMORPG 기획서.</p>
                 </div>
             </div>
           </div>
