--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta property="og:description" content="게임기획서 모음" />
   <meta property="og:image" content="./images/name_seo.png" />
   <!-- 아텐츠주소 대신 자신의 웹페이지 주소로 바꾸세요 -->
-  <meta property="og:url" content="https://atentsgamedesignsite19.netlify.app" />
+  <meta property="og:url" content="http://127.0.0.1:5500/index.html" />
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="흰색의 문서 열람" />
   <meta property="twitter:title" content="Intro" />
   <meta property="twitter:description" content="게임기획서 모음" />
   <meta property="twitter:image" content="./images/name_seo.png" />
   <!-- 아텐츠주소 대신 자신의 웹페이지 주소로 바꾸세요 -->
-  <meta property="twitter:url" content="https://atentsgamedesignsite19.netlify.app" />
+  <meta property="twitter:url" content="http://127.0.0.1:5500/index.html" />
   <link rel="icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/main.css">
   <!-- <link rel="stylesheet" href="/main.css"> -->
@@ -39,7 +39,7 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     allowfullscreen>
     </iframe> -->
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Zppe-QzVxN4?loop=1&autoplay=1&mute=2&si=6QW51G6pezYAjyt7&playlist=Zppe-QzVxN4" 
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Zppe-QzVxN4?loop=1&autoplay=1&mute=1&si=6QW51G6pezYAjyt7&playlist=Zppe-QzVxN4" 
     title="YouTube video player" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
