--- a/pages/sub01.html
+++ b/pages/sub01.html
@@ -95,8 +95,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
-            <h4 class="text-white">흰색의 프로젝트</h4>
-            <p class="text-muted">프로젝트01은 나의 첫 게임기획물이며 블라블라...</p>
+            <h4 class="text-white">당잠사에 대하여</h4>
+            <p class="text-muted">당잠사는...</p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">모험을 떠나 본 적이 언제인가!</h4>
@@ -149,10 +149,10 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship01.jpg" class="card-img-top" alt="우주선1">
               <div class="card-body">
-                <h5 class="card-title">흰색의 UI디자인</h5>
-                <p class="card-text">흰색 UI디자인에 대하여</p>
+                <h5 class="card-title">당잠사의 UI디자인</h5>
+                <p class="card-text">당잠사의 UI디자인에 대하여</p>
                 <a href="/pages/page01.html" class="btn btn-dark">문서열람</a>
-                <a href="/pages/page01-1.html" class="btn btn-info">IA열람</a>
+                <a href="/pages/page01-1.html" class="btn btn-info">씬플로우IA</a>
               </div>
             </div>
           </div>
